13/03 code push for credits